# harness-engineering-study

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json  settings.local.json
design/: mvp-architecture.md
docs/: api-reference.md  learning-plan.md  phase1-completion.md  phase2-completion.md  phase3-completion.md  phase4-completion.md  phase5-completion.md  quick-start.md  stage1-tasks.md
examples/todo-app/: Plans.md  README.md
examples/todo-app/src/: api.py  todo.py
examples/todo-app/tests/: test_todo.py
harness-mvp/: .coverage  PHASE1_REPORT.md  Plans.md  README.md  pyproject.toml  test_plans.md  verify.py
harness-mvp/.harness/: events.json  state.json
harness-mvp/harness/: __init__.py  cli.py  executor.py  git.py  history.py  models.py  parser.py  planner.py  reviewer.py  state.py  store.py
harness-mvp/harness_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
harness-mvp/tests/: test_cli.py  test_cli_phase2.py  test_cli_phase4.py  test_executor.py  test_history.py  test_integration.py  test_models.py  test_parser.py  test_planner.py  test_reviewer.py  test_state.py  test_store.py
research/: agent-os-implementation.md  anthropic-harness-design-cn.md  claude-code-harness-implementation.md  claude-code-harness-runtime-experience.md  comparison.md  core-concepts.md  design-patterns.md  existing-harnesses-analysis.md  key-insights.md  modern-harness-2026-cn.md  openai-harness-engineering-cn.md  refact-implementation.md  resources.md
